--- a/src/components/header/headerWeb.module.css
+++ b/src/components/header/headerWeb.module.css
@@ -1,4 +1,9 @@
+.spacer {
+  height: var(--spacing-12);
+}
+
 .container {
+  top: 0;
   position: fixed;
   width: 100vw;
   height: var(--spacing-12);
